force-app/main/default/objects/Asset/Asset.object-meta.xml
<CustomObject>
</CustomObject>