force-app/main/default/objects/Asset/fields/Asset_Downtime__c.field-meta.xml
<CustomField>
    <fullName>Asset_Downtime__c</fullName>
    <label>Asset Downtime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>