force-app/main/default/objects/Asset/fields/Asset_Reliability__c.field-meta.xml
<CustomField>
    <fullName>Asset_Reliability__c</fullName>
    <label>Asset Reliability</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>