force-app/main/default/objects/Asset/fields/Average_Repair_Time__c.field-meta.xml
<CustomField>
    <fullName>Average_Repair_Time__c</fullName>
    <label>Average Repair Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>