force-app/main/default/objects/Asset/fields/Average_Time_Between_Failures__c.field-meta.xml
<CustomField>
    <fullName>Average_Time_Between_Failures__c</fullName>
    <label>Average Time Between Failures</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>