force-app/main/default/objects/Asset/fields/Entitlement_Status__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Status__c</fullName>
    <label>Warranty Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>30 Day Warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>