force-app/main/default/objects/Asset/fields/SDO_Service_Warranty_Services__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Warranty_Services__c</fullName>
    <label>Warranty Services</label>
    <type>TextArea</type>
</CustomField>